--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "start": "ts-node ."
   },
   "dependencies": {
+    "@types/crc": "^3.4.0",
     "@types/node": "^10.12.21",
     "@types/usb": "^1.5.1",
+    "@types/uuid": "^3.4.4",
     "chalk": "^2.4.2",
+    "crc": "^3.8.0",
     "typescript": "^3.3.1",
-    "usb": "^1.5.0"
+    "usb": "^1.5.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "ts-node": "^8.0.2"
