--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/uuid": "^3.4.4",
     "chalk": "^2.4.2",
     "crc": "^3.8.0",
+    "nrf-intel-hex": "^1.3.0",
     "typescript": "^3.3.1",
     "usb": "^1.5.0",
     "uuid": "^3.3.2"
