--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node .",
+    "configureMLX": "ts-node ./src/MLXcontrol",
     "test": "ts-node ./src/Oscillate"
   },
   "dependencies": {
+    "@types/chalk": "^2.2.0",
     "@types/crc": "^3.4.0",
     "@types/node": "^10.12.21",
     "@types/usb": "^1.5.1",
@@ -18,6 +20,7 @@
     "chalk": "^2.4.2",
     "crc": "^3.8.0",
     "nrf-intel-hex": "^1.3.0",
+    "strict-event-emitter-types": "^2.0.0",
     "typescript": "^3.3.1",
     "usb": "^1.5.0",
     "uuid": "^3.3.2"
