--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
     "test": "ts-node ./src/Oscillate"
   },
   "dependencies": {
-    "@types/chalk": "^2.2.0",
     "@types/crc": "^3.4.0",
     "@types/node": "^10.12.21",
     "@types/usb": "^1.5.1",
     "@types/uuid": "^3.4.4",
     "chalk": "^2.4.2",
     "crc": "^3.8.0",
+    "ee-ts": "^1.0.1",
     "nrf-intel-hex": "^1.3.0",
     "strict-event-emitter-types": "^2.0.0",
-    "typescript": "^3.3.1",
+    "typescript": "^3.3.3",
     "usb": "^1.5.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "ts-node": "^8.0.2"
+    "ts-node": "^8.0.2",
+    "tslint": "^5.12.1"
   }
 }
