--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "noImplicitAny": true,
     "strict": true,
     "baseUrl": "src/types",
+    "types": ["node"],
     "typeRoots": ["src/types"]
   }
 }
