--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "test": "ts-node ./src/Oscillate"
   },
   "dependencies": {
+    "@types/chart.js": "^2.7.44",
     "@types/crc": "^3.4.0",
     "@types/node": "^10.12.21",
     "@types/usb": "^1.5.1",
     "@types/uuid": "^3.4.4",
     "chalk": "^2.4.2",
+    "chart.js": "^2.7.3",
+    "chartjs-node": "^1.7.1",
     "crc": "^3.8.0",
     "ee-ts": "^1.0.1",
     "nrf-intel-hex": "^1.3.0",
