--- a/package.json
+++ b/package.json
@@ -20,11 +20,8 @@
     "@types/uuid": "^3.4.4",
     "chalk": "^2.4.2",
     "chart.js": "^2.7.3",
-    "chartjs-node": "^1.7.1",
     "crc": "^3.8.0",
-    "ee-ts": "^1.0.1",
     "nrf-intel-hex": "^1.3.0",
-    "strict-event-emitter-types": "^2.0.0",
     "typescript": "^3.3.3",
     "usb": "^1.5.0",
     "uuid": "^3.3.2"
@@ -32,5 +29,8 @@
   "devDependencies": {
     "ts-node": "^8.0.2",
     "tslint": "^5.12.1"
+  },
+  "optionalDependencies": {
+    "chartjs-node": "^1.7.1"
   }
 }
