Use reusable packages for motor controls

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,10 @@
     "lib": ["es2018", "dom"],
     "noImplicitAny": true,
     "strict": true,
-    "baseUrl": "src/types"
-    // "types": ["node"],
-    // "typeRoots": ["src/types"]
-    // "typeRoots": ["node_modules/@types", "node_modules", "src/types"]
+    "moduleResolution": "node",
+    "baseUrl": "src",
+    "paths": {
+      "*": ["types/*", "*"]
+    }
   }
 }
