--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^2.7.3",
     "crc": "^3.8.0",
     "nrf-intel-hex": "^1.3.0",
+    "smooth-control": "https://github.com/cinderblock/smooth-control.git",
     "typescript": "^3.3.3",
     "usb": "^1.5.0",
     "uuid": "^3.3.2"
