--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "esnext",
     "alwaysStrict": true,
     "esModuleInterop": true,
+    "pretty": true,
     "lib": ["es2018", "dom"],
     "noImplicitAny": true,
     "strict": true,
