--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "ts-node ./src/main",
     "debug": "ts-node ./src/debug",
     "mlx": "ts-node ./src/MLXcontrol",
+    "prog": "ts-node ./src/Program",
     "test": "ts-node ./src/Oscillate"
   },
   "dependencies": {
