Add a runtime for the test

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prog": "ts-node ./src/runtimes/Program",
     "process": "ts-node ./src/runtimes/Reprocess",
     "raw-import": "ts-node ./src/runtimes/MakeDataBlock",
+    "test4": "ts-node ./src/runtimes/Test4",
     "test": "ts-node ./src/runtimes/Test"
   },
   "dependencies": {
