--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^11.11.3",
     "@types/usb": "^1.5.1",
     "@types/uuid": "^3.4.4",
+    "canvas": "1.6.13",
     "chalk": "^2.4.2",
     "chart.js": "^2.8.0",
     "crc": "^3.8.0",
