Import helpful code from donor project
Donor commit: 17c0636f828b1afc5a687786613b36f09ce1b339

--- a/.huskyrc
+++ b/.huskyrc
@@ -1,7 +1,5 @@
 {
   "hooks": {
-    "post-checkout": "npm run synchronize-workspace",
-    "post-merge": "npm run synchronize-workspace",
-    "post-rewrite": "npm run synchronize-workspace"
+    "post-pull": "npm run synchronize-workspace"
   }
 }
