--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "husky": "^3.1.0",
     "install-vscode-extensions": "^1.0.0",
+    "nodemon": "^2.0.1",
     "prettier": "^1.19.1",
     "ts-node": "^8.6.1",
     "ts-node-dev": "^1.0.0-pre.44",
