--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "3-Phase-Calibration-Tool",
+  "name": "3-phase-calibration-tool",
   "version": "0.0.0",
   "description": "Calibration tool for 3-Phase-Controller",
-  "main": "src/main",
   "repository": "https://github.com/cinderblock/3-Phase-Calibration-Tool",
   "author": "Cameron Tacklind <cameron@tacklind.com>",
   "license": "MIT",
   "scripts": {
-    "setup": "yarn install && yarn daemon install && yarn deploy install && yarn ui install && install-vscode-extensions",
-    "synchronize-workspace": "yarn --non-interactive --no-progress && yarn daemon --non-interactive --no-progress && yarn deploy --non-interactive --no-progress && yarn ui --non-interactive --no-progress && install-vscode-extensions",
-    "upgrade-all": "yarn upgrade --latest && yarn daemon upgrade --latest && yarn deploy upgrade --latest && yarn ui upgrade --latest",
+    "setup": "yarn install && yarn main install && yarn ui install && yarn deploy install && install-vscode-extensions",
+    "synchronize-workspace": "yarn --non-interactive --no-progress && yarn main --non-interactive --no-progress && yarn deploy --non-interactive --no-progress && yarn ui --non-interactive --no-progress && install-vscode-extensions",
+    "upgrade-all": "yarn upgrade --latest && yarn main upgrade --latest && yarn deploy upgrade --latest && yarn ui upgrade --latest",
     "lint": "eslint . --ext .ts,.tsx",
-    "ui": "yarn --cwd ui",
-    "daemon": "yarn --cwd daemon",
-    "deploy": "yarn --cwd deploy",
+    "ui": "yarn --cwd renderer",
+    "main": "yarn --cwd main",
+    "remote": "yarn --cwd remote",
+    "deploy": "yarn remote --cwd deploy",
     "start": "ts-node ./src/runtimes/Calibrate",
     "debug": "ts-node ./src/runtimes/Debug",
     "mlx": "ts-node ./src/runtimes/MLXcontrol",
@@ -36,7 +36,6 @@
     "crc": "^3.8.0",
     "nrf-intel-hex": "^1.3.0",
     "smooth-control": "https://github.com/cinderblock/smooth-control.git",
-    "typescript": "^3.7.4",
     "usb": "^1.6.2",
     "uuid": "^3.3.3",
     "yarn": "^1.21.1"
@@ -44,18 +43,18 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.11.0",
     "@typescript-eslint/parser": "^2.11.0",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^2.3.0",
-    "husky": "^3.1.0",
+    "husky": "^4.0.6",
     "install-vscode-extensions": "^1.0.0",
     "nodemon": "^2.0.1",
     "prettier": "^1.19.1",
     "ts-node": "^8.6.1",
     "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.7.3"
+    "typescript": "^3.7.4"
   },
   "optionalDependencies": {
     "chartjs-node": "^1.7.1"
