--- a/renderer/package.json
+++ b/renderer/package.json
@@ -22,13 +22,16 @@
     }
   },
   "dependencies": {
+    "aphrodite": "^2.4.0",
     "electron-is-dev": "^1.1.0",
+    "rc-slider": "^8.7.1",
     "react": "^16.12.0",
     "react-animations": "^1.0.0",
     "react-device-detect": "^1.11.14",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.18",
-    "react-scripts": "3.0.1",
+    "react-scripts": "3.3.0",
+    "react-smoothie": "^0.11.0",
     "react-timeago": "^4.4.0",
     "shallowequal": "^1.1.0",
     "socket.io-client": "^2.3.0"
@@ -38,7 +41,7 @@
     "react-build": "react-scripts build",
     "react-test": "react-scripts test --env=jsdom",
     "react-eject": "react-scripts eject",
-    "react-prebuild": "cross-env cp ../main/src/*.js public/",
+    "react-prebuild": "cross-env cp ../main/dist/*.js public/",
     "electron-build": "electron-builder",
     "release": "npm run react-prebuild && npm run react-build && electron-builder --publish=always",
     "build": "npm run react-prebuild && npm run react-build && npm run electron-build",
@@ -60,18 +63,20 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "24.0.15",
-    "@types/node": "12.0.10",
+    "@types/jest": "24.0.25",
+    "@types/node": "13.1.6",
+    "@types/rc-slider": "^8.6.5",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "@types/react-timeago": "^4.1.1",
     "@types/socket.io-client": "^1.4.32",
     "chalk": "^3.0.0",
-    "electron": "^5.0.6",
+    "concurrently": "^5.0.2",
+    "cross-env": "^6.0.3",
+    "electron": "^7.1.8",
+    "electron-builder": "^21.2.0",
     "electron-reload": "^1.4.0",
-    "electron-builder": "^20.44.4",
     "wait-on": "^3.2.0",
-    "concurrently": "^4.1.1",
-    "cross-env": "^5.2.0",
     "watch": "^1.0.2"
   }
 }
