--- a/renderer/package.json
+++ b/renderer/package.json
@@ -22,6 +22,7 @@
     }
   },
   "dependencies": {
+    "@craco/craco": "^5.6.3",
     "aphrodite": "^2.4.0",
     "electron-is-dev": "^1.1.0",
     "rc-slider": "^8.7.1",
@@ -37,9 +38,9 @@
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
-    "react-start": "react-scripts start",
-    "react-build": "react-scripts build",
-    "react-test": "react-scripts test --env=jsdom",
+    "react-start": "craco start",
+    "react-build": "craco build",
+    "react-test": "craco test --env=jsdom",
     "react-prebuild": "cross-env cp ../main/dist/*.js public/",
     "electron-build": "electron-builder",
     "release": "npm run react-prebuild && npm run react-build && electron-builder --publish=always",
