--- a/main/package.json
+++ b/main/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "./dist/electron.js",
   "scripts": {
-    "start": "concurrently \"tsc --watch\" \"wait-on http://localhost:3000 && cross-env NODE_ENV=dev nodemon --watch dist --exec \\\"electron dist/electron.js\\\""
+    "start": "concurrently \"tsc --watch\" \"wait-on http://localhost:3000 && cross-env NODE_ENV=dev nodemon --watch dist --exec \\\"electron dist/electron.js\\\"\""
   },
   "dependencies": {
     "electron": "^7.1.8"
