--- a/main/package.json
+++ b/main/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "main": "./dist/electron.js",
   "scripts": {
+    "postinstall": "electron-rebuild",
     "start": "concurrently --handle-input \"wait-on http://localhost:3000 && cross-env NODE_ENV=dev nodemon --watch dist --exec \\\"electron dist/electron.js\\\"\" \"tsc --watch\""
   },
   "dependencies": {
-    "electron": "^7.1.8"
+    "electron": "7.1.8",
+    "electron-rebuild": "^1.8.8",
+    "smooth-control": "https://github.com/cinderblock/smooth-control.git#manual-transfers"
   },
   "devDependencies": {
     "concurrently": "^5.0.2",
