--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "chart.js": "^2.9.3",
     "crc": "^3.8.0",
     "nrf-intel-hex": "^1.3.0",
-    "smooth-control": "https://github.com/cinderblock/smooth-control.git",
-    "usb": "^1.6.2",
+    "smooth-control": "https://github.com/cinderblock/smooth-control.git#manual-transfers",
     "uuid": "^3.3.3",
     "yarn": "^1.21.1"
   },
