--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,5 @@
 # Set the default behavior for all fiels to checkout with LF
-* text eol=lf
+* text=auto eol=lf
 
 # Declare files that will always have CRLF line endings on checkout.
 # *.sln text eol=crlf
-
-# Denote all files that are truly binary and should not be modified.
-*.png binary
-*.jpg binary
-*.otf binary
-*.woff binary
