--- a/main/package.json
+++ b/main/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "electron": "7.1.8",
     "electron-rebuild": "^1.8.8",
+    "mlx90363": "https://github.com/cinderblock/node-MLX90363.git",
     "smooth-control": "https://github.com/cinderblock/smooth-control.git#manual-transfers"
   },
   "devDependencies": {
