no more setup. just yarn

--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
   "author": "Cameron Tacklind <cameron@tacklind.com>",
   "license": "MIT",
   "scripts": {
-    "setup": "yarn install && yarn main install && yarn ui install && yarn deploy install && install-vscode-extensions",
-    "check-files": "yarn install --check-files && yarn main install --check-files && yarn ui install --check-files && yarn deploy install --check-files && install-vscode-extensions",
-    "synchronize-workspace": "yarn --non-interactive --no-progress && yarn main --non-interactive --no-progress && yarn deploy --non-interactive --no-progress && yarn ui --non-interactive --no-progress && install-vscode-extensions",
-    "upgrade-all": "yarn upgrade --latest && yarn main upgrade --latest && yarn deploy upgrade --latest && yarn ui upgrade --latest",
+    "install": "yarn main install && yarn ui install && yarn remote install && install-vscode-extensions",
+    "check-files": "yarn install --ignore-scripts --check-files && yarn main install --check-files && yarn ui install --check-files && yarn remote install --check-files && install-vscode-extensions",
+    "synchronize-workspace": "yarn install --ignore-scripts --non-interactive --no-progress && yarn main install --non-interactive --no-progress && yarn remote install --non-interactive --no-progress && yarn ui install --non-interactive --no-progress && install-vscode-extensions",
+    "upgrade-all": "yarn upgrade --latest && yarn main upgrade --latest && yarn remote upgrade --latest && yarn ui upgrade --latest",
     "lint": "eslint . --ext .ts,.tsx",
     "ui": "yarn --cwd renderer",
     "main": "yarn --cwd main",
-    "remote": "yarn --cwd remote",
-    "deploy": "yarn remote --cwd deploy",
+    "remote": "yarn --cwd remote/deploy",
     "start": "ts-node ./src/runtimes/Calibrate",
     "debug": "ts-node ./src/runtimes/Debug",
     "mlx": "ts-node ./src/runtimes/MLXcontrol",
