--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@types/uuid": "^3.4.6",
     "canvas": "2.6.1",
     "chalk": "^3.0.0",
-    "chart.js": "^2.9.3",
+    "chart.js": "2.7",
     "crc": "^3.8.0",
     "nrf-intel-hex": "^1.3.0",
     "smooth-control": "https://github.com/cinderblock/smooth-control.git#manual-transfers",
