--- a/renderer/package.json
+++ b/renderer/package.json
@@ -34,6 +34,7 @@
     "react-scripts": "3.3.0",
     "react-smoothie": "^0.11.0",
     "react-timeago": "^4.4.0",
+    "recharts": "^2.0.0-beta.1",
     "shallowequal": "^1.1.0",
     "socket.io-client": "^2.3.0"
   },
@@ -69,6 +70,7 @@
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "@types/react-timeago": "^4.1.1",
+    "@types/recharts": "^1.8.5",
     "@types/socket.io-client": "^1.4.32",
     "chalk": "^3.0.0",
     "concurrently": "^5.0.2",
