Working test-many

--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     "prog": "ts-node ./src/runtimes/Program",
     "process": "ts-node ./src/runtimes/Reprocess",
     "raw-import": "ts-node ./src/runtimes/MakeDataBlock",
-    "test4": "ts-node ./src/runtimes/Test4",
+    "test-many": "ts-node ./src/runtimes/TestMany",
     "fieldtest": "ts-node ./src/runtimes/FieldTest",
     "test": "ts-node ./src/runtimes/Test"
   },
   "dependencies": {
     "@types/chart.js": "^2.9.11",
     "@types/crc": "^3.4.0",
-    "@types/node": "^13.5.0",
+    "@types/node": "^13.7.0",
     "@types/usb": "^1.5.1",
-    "@types/uuid": "^3.4.6",
+    "@types/uuid": "^3.4.7",
     "canvas": "2.6.1",
     "chalk": "^3.0.0",
     "chart.js": "2.9.3",
@@ -43,7 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.7.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^2.3.0",
