--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "chalk": "^3.0.0",
     "chart.js": "2.9.3",
     "crc": "^3.8.0",
+    "koa": "^2.11.0",
     "nrf-intel-hex": "^1.3.0",
     "smooth-control": "https://github.com/cinderblock/smooth-control.git#manual-transfers",
     "uuid": "^3.4.0",
     "yarn": "^1.21.1"
   },
   "devDependencies": {
+    "@types/koa": "^2.11.0",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "eslint": "^6.8.0",
