--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
-    "rootDir": "src",
     "allowJs": true,
+    "rootDirs": ["src", ".."],
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -16,5 +16,5 @@
     "noEmit": true,
     "jsx": "preserve"
   },
-  "include": ["src"]
+  "include": ["src", "../shared"]
 }
