--- a/main/package.json
+++ b/main/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "./dist/electron.js",
   "scripts": {
-    "postinstall": "electron-rebuild",
-    "start": "concurrently --names \"main,TypeScript Compiler Watch\" --handle-input \"wait-on http://localhost:3000 && cross-env NODE_ENV=dev nodemon --watch dist --exec \\\"electron dist/electron.js\\\"\" \"tsc --watch\""
+    "postinstall": "npx electron-rebuild",
+    "start": "npx concurrently --names \"main,TypeScript Compiler Watch\" --handle-input \"wait-on http://localhost:3000 && cross-env NODE_ENV=dev nodemon --watch dist --exec \\\"electron dist/electron.js\\\"\" \"tsc --watch\""
   },
   "dependencies": {
     "electron": "7.1.9",
